--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -20,8 +20,8 @@
   span.b-eyebrow-large {
     padding-bottom: 20px;
     display: block;
-    top: -5px;
-    position: relative;
+    // top: -5px;
+    // position: relative;
   }
 
   // stylelint-disable selector-max-compound-selectors
