--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -43,7 +43,7 @@
 
 .eaton-list-component a:hover, .eaton-list-component a:active, .eaton-list-component a:visited, .eaton-list-component a:focus { color: #005EB8; text-decoration: none; }
 
-.eaton-list-component h2 { padding-bottom: 10px; padding-top: 120px; }
+.eaton-list-component h2 { padding-bottom: 10px; }
 
 @media screen and (min-width: 768px) and (max-width: 991px) { .eaton-list-component h2 { padding-bottom: 15px; } }
 
