EATON-581: added responsive styles for moble list

--- a/eaton.frontend/src/components/list/css/views/_view-default.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-default.scss
@@ -21,7 +21,10 @@
 
   h2 {
     padding-bottom: 10px;
-    padding-top: 120px;
+
+    .category-highlight & {
+      padding-top: 120px;
+    }
   }
 
   @include media-tablet-only {
