--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -348,6 +348,9 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .eaton-text-default .rich-text-container ul li::before { height: 10px; width: 10px; content: ''; background-color: #005EB8; border-radius: 50%; left: 0; position: absolute; top: 0.6em; }
 
+@media screen and (max-width: 991px) { .eaton-text-default .rich-text-container ul li { padding: 0 0 15px 15px; }
+  .eaton-text-default .rich-text-container ul li::before { height: 5px; width: 5px; left: 1px; top: 0.3em; } }
+
 .dark-theme .eaton-text-default .rich-text-container { color: #FFF; }
 
 .dark-theme .eaton-text-default .rich-text-container a, .dark-theme .eaton-text-default .rich-text-container a:visited { text-decoration: underline; color: #FFF; }
