--- a/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
+++ b/eaton.frontend/src/components/title/css/views/_view-witheyebrowbyline.scss
@@ -30,6 +30,7 @@ h2.eaton-title__eyebrow-and-byline {
 
   &__eyebrow {
     margin-bottom: 15px;
+    display: block;
 
     i {
       font-weight: normal;
