--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title/css/title.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/title/css/title.css
@@ -27,7 +27,7 @@ h2.eaton-title__eyebrow-and-byline { margin-top: 0; margin-bottom: 15px; }
 
 .eaton-title__line { border-top: 4px solid #005EB8; width: 60px; display: block; margin: 20px 0 25px; }
 
-.eaton-title__eyebrow { margin-bottom: 15px; }
+.eaton-title__eyebrow { margin-bottom: 15px; display: block; }
 
 .eaton-title__eyebrow i { font-weight: normal; font-size: 1.2rem; margin-right: 5px; }
 
