--- a/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
@@ -1,8 +1,7 @@
 .text-only-3-column {
 
   padding-top: 60px;
-  padding-bottom: 60px;
-
+  margin-bottom: 120px;
 
   h2 {
     padding-bottom: 10px;
@@ -46,7 +45,7 @@
   @include media-tablet-and-up {
 
     padding-top: 120px;
-    padding-bottom: 60px;
+    margin-bottom: 120px;
 
 
     h2 {
@@ -55,7 +54,7 @@
 
 
     .b-eyebrow-small {
-      padding: 15px 0 40px 0;
+      padding: 15px 0 30px 0;
     }
 
     .category-item-date {
