--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -207,7 +207,7 @@
   .text-only-2-column__article { padding-top: 30px; }
   .text-only-2-column__cta-container { margin-top: 30px; } }
 
-.text-only-3-column { padding-top: 60px; padding-bottom: 60px; }
+.text-only-3-column { padding-top: 60px; margin-bottom: 120px; }
 
 .text-only-3-column h2 { padding-bottom: 10px; }
 
@@ -223,9 +223,9 @@
 
 @media screen and (max-width: 767px) { .text-only-3-column__cta-container a { width: 100%; } }
 
-@media screen and (min-width: 768px) { .text-only-3-column { padding-top: 120px; padding-bottom: 60px; }
+@media screen and (min-width: 768px) { .text-only-3-column { padding-top: 120px; margin-bottom: 120px; }
   .text-only-3-column h2 { padding-bottom: 10px; }
-  .text-only-3-column .b-eyebrow-small { padding: 15px 0 40px 0; }
+  .text-only-3-column .b-eyebrow-small { padding: 15px 0 30px 0; }
   .text-only-3-column .category-item-date { padding-top: 8px; }
   .text-only-3-column__description { padding-bottom: 15px; }
   .text-only-3-column__article { padding-top: 30px; }
