--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/sitemap/css/sitemap.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/sitemap/css/sitemap.css
@@ -13,9 +13,9 @@
 
 .eaton-sitemap { padding: 30px 0; }
 
-.eaton-sitemap__levelone { font-size: 5.0rem; color: #005EB8; margin-bottom: 30px; }
+.eaton-sitemap__levelone { font-family: "Eaton", Arial, sans-serif; font-size: 5.0rem; color: #005EB8; margin-bottom: 30px; }
 
-.eaton-sitemap__leveltow { font-size: 3.2rem; display: block; color: #005EB8; margin-bottom: 15px; }
+.eaton-sitemap__leveltow { font-family: "Eaton", Arial, sans-serif; font-size: 3.2rem; display: block; color: #005EB8; margin-bottom: 15px; }
 
 .eaton-sitemap .separator { width: 100%; height: 1px; background: #dcdcdc; margin-bottom: 25px; }
 
