EATON-515: added extra espace in card view

--- a/eaton.frontend/src/components/ttil/css/views/_view-card.scss
+++ b/eaton.frontend/src/components/ttil/css/views/_view-card.scss
@@ -5,7 +5,7 @@
 
   &__image { margin-bottom: $spacing__sm; }
 
-  &__title { margin-bottom: $spacing__sm; }
+  &__title { margin-bottom: 45px; }
 
   &__text {
     color: $color__primary-blue;
