--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-box/views/view-default.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/search/search-box/views/view-default.html
@@ -10,7 +10,8 @@
               target="${data.form.isExternal == true ? '_blank' : '_self'}">
           <div class="form-group">
             <label for="mega-menu-search" class="sr-only">${data.header}</label>
-            <textarea name="search-term"
+            <textarea rows="1" 
+                    name="search-term"
                     id="primary-menu-search"
                     class="form-control eaton-search--default__form-input"
                     placeholder="${data.form.placeholder}"
