[EATON-533] List (Text Only 3 Column) - Mobile - Padding issues fix

--- a/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
+++ b/eaton.frontend/src/components/list/css/views/_view-text-only-3-column.scss
@@ -39,6 +39,14 @@
       width: 100%;
     }
 
+    h2 {
+      padding-bottom: 20px;
+    }
+
+    .b-eyebrow-small {
+      padding-bottom: 30px;
+    }
+
   }
 
 
