[EATON-81] Add image Renditions to Results List submodules - T-10 Search Results, - T6 Product Grid Subcategory - T7 Product Grid SKU - Also adding image renditions to the content loaded with AJAX

--- a/eaton.frontend/src/components/product-grid/css/views/_product-card-sku.scss
+++ b/eaton.frontend/src/components/product-grid/css/views/_product-card-sku.scss
@@ -48,7 +48,7 @@
     z-index: 2;
   }
 
-  &__image {
+  .rendition__image {
     @include square($thumbnail-size-mobile); // Width & Height
     border: 1px solid $color__image-border;
     background-color: $color__white;
@@ -187,7 +187,7 @@
       top: 20px;
     }
 
-    &__image {
+    .rendition__image {
       @include square($thumbnail-size-desktop); // Width & Height
       padding: 1rem;
     }
