--- a/eaton.frontend/src/components/product-grid/css/views/_product-card-subcategory.scss
+++ b/eaton.frontend/src/components/product-grid/css/views/_product-card-subcategory.scss
@@ -59,7 +59,7 @@
     margin-bottom: 22px;
   }
 
-  &__image {
+  .rendition__image {
     position: absolute;
     background-color: $color__image-bg;
     border: 1px solid $color__image-border;
