--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/product-card-sku-item.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-grid/views/partials/product-card-sku-item.html
@@ -17,9 +17,11 @@
         class="product-card-sku__image-link"
         target="${ itemData.contentItem.link.target }"
       >
-        <img src="${ itemData.contentItem.image.src }"
-          class="product-card-sku__image"
-          alt="${ itemData.contentItem.name }" />
+        <!-- Start: Rendition Image Component -->
+        <sly data-sly-use.tpl="eaton/static-components/shared/templates/rendition-image.html">
+          <sly data-sly-call="${ tpl.module @ data=itemData.contentItem.image }"></sly>
+        </sly>
+        <!-- End: Rendition Image Component -->
       </a>
     </div>
 
