--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -89,8 +89,11 @@
   .eaton-search--default .icon-search { font-size: 1.25em; }
   .search-open .eaton-search--default { height: 100%; overflow-y: auto; } }
 
-@media screen and (min-width: 992px) { .eaton-search--default__form-input { font-size: 2.4rem; }
-  .eaton-search--default .icon-search { font-size: 2.1rem; left: 10px; }
+@media screen and (min-width: 768px) { .eaton-search--default__form-input { font-size: 2.6rem; } }
+
+@media screen and (max-width: 767px) { .eaton-search--default__form-input { font-size: 2rem; } }
+
+@media screen and (min-width: 992px) { .eaton-search--default .icon-search { font-size: 2.1rem; left: 10px; }
   .eaton-header--fixed .eaton-search--default .icon-search { left: 0; }
   .eaton-header--fixed .eaton-search--default__form-submit { padding-right: 0; }
   .eaton-search--default__result-item { line-height: 3rem; } }
