[EATON-533] List (Text Only 3 Column) - Mobile - Padding issues fix

--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/list/css/list.css
@@ -221,7 +221,8 @@
 
 .text-only-3-column__cta-container { margin-top: 3px; }
 
-@media screen and (max-width: 767px) { .text-only-3-column__cta-container a { width: 100%; }
+@media screen and (max-width: 767px) { .text-only-3-column { margin-bottom: 60px; }
+  .text-only-3-column__cta-container a { width: 100%; }
   .text-only-3-column h2 { padding-bottom: 20px; }
   .text-only-3-column .b-eyebrow-small { padding-bottom: 30px; } }
 
