--- a/eaton.frontend/src/global/css/base/elements/_rich-text.scss
+++ b/eaton.frontend/src/global/css/base/elements/_rich-text.scss
@@ -47,6 +47,7 @@
 
   p {
     font-family: Arial, sans-serif;
+    margin: 0;
     // font-size: 2.4rem;
     // line-height: 3.8rem;
     @include body-copy;
